@@ -1,7 +1,7 @@
 package ru.job4j.tracker;
 
-import java.util.Arrays;
 import java.util.List;
+
 public class StartUI {
 
     private final Output out;
@@ -10,7 +10,7 @@ public class StartUI {
         this.out = out;
     }
 
-    public void init(Input input, Tracker tracker, List<UserAction> actions) {
+    public void init(Input input, Store tracker, List<UserAction> actions) {
         boolean run = true;
         while (run) {
             this.showMenu(actions);
@@ -24,25 +24,30 @@ public class StartUI {
         }
     }
 
-        private void showMenu(List<UserAction> actions) {
-            out.println("Menu:");
-            for (int i = 0; i < actions.size(); i++) {
-                out.println(i + ". " + actions.get(i).name());
-            }
+    private void showMenu(List<UserAction> actions) {
+        out.println("Menu:");
+        for (int i = 0; i < actions.size(); i++) {
+            out.println(i + ". " + actions.get(i).name());
         }
+    }
 
-        public static void main(String[] args) {
-            Output output = new ConsoleOutput();
-            Input input = new ValidateInput(output, new ConsoleInput());
-            Tracker tracker = new Tracker();
-            List<UserAction> actions = Arrays.asList(
+    public static void main(String[] args) {
+        Output output = new ConsoleOutput();
+        Input input = new ValidateInput(output, new ConsoleInput());
+        try (SqlTracker tracker = new SqlTracker()) {
+            tracker.init();
+            List<UserAction> actions = List.of(
                     new CreateAction(output),
                     new FindAllAction(output),
                     new ReplaceAction(output),
                     new DeleteAction(output),
                     new FindByIdAction(output),
                     new FindByNameAction(output),
-                    new ExitAction(output));
+                    new ExitAction(output)
+            );
             new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
+}
